# offchain-evm-headers-processor

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  requirements.txt
cairo_vm_hints/: Cargo.toml
cairo_vm_hints/src/: lib.rs  main.rs
single-chunk-processor/: .dockerignore  Dockerfile  package.json  runner_requirements.txt
single-chunk-processor/src/: main.cairo  runner.py
solidity-verifier/: .env.example  .prettierignore  .prettierrc  .solhint.json  README.md  bun.lockb  foundry.toml  package.json  pnpm-lock.yaml
solidity-verifier/helpers/: compute-outputs.js  compute-outputs.ts  outputs_batch_1.json
solidity-verifier/script/: AggregatorsFactory.s.sol
solidity-verifier/src/: AggregatorsFactory.sol  SharpFactsAggregator.sol  SharpVerifier.sol
solidity-verifier/test/: AggregatorsFactory.t.sol  Live.t.sol  SharpFactsAggregator.t.sol  SharpVerifier.t.sol
src/: blockheader_rlp_extractor.cairo  extract_from_rlp.cairo  unsafe_keccak.cairo  utils.cairo  words64.cairo
src/cairo_mmr/: historical_mmr.cairo  stateless_mmr.cairo
src/libs/: block_header.cairo  block_header_rlp.cairo  mmr.cairo  utils.cairo
src/merkle_mountain/: helpers.cairo  historical_mmr.cairo  stateless_mmr.cairo
src/single-chunk-processor/: Dockerfile  main.cairo  main_input.json
src/single_chunk_processor/: README.md  block_header_rlp.cairo  chunk_processor.cairo  chunk_processor_input.json  fetch_block_headers_rlp.cairo  main.cairo  main_input.json
tests/cairo_programs/: bit_length.cairo  construct_mmr_test.cairo  dw_hack_test.cairo  encode_packed_256_256.cairo  (+12 more)
(+36 files in other folders)
