[workspace]
resolver = "2"

members = ["cairo_vm_hints"]


[workspace.dependencies]
bincode = { version = "2.0.1", default-features = false, features = ["serde"] }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", tag = "v2.0.1", features = [
    "extensive_hints",
    "clap",
    "cairo-1-hints",
    "mod_builtin",
] }
clap = { version = "4.3.10", features = ["derive"] }
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8"
sha3 = "0.10.8"
starknet-crypto = "0.7.2"
starknet-types-core = "0.1.7"
thiserror = "1.0.64"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

eth_essentials_cairo_vm_hints = { git = "https://github.com/HerodotusDev/eth_essentials.git", rev = "0e982d8114a165c89bed9c1bf7742846d23f1189" }
serde_json = "1.0.132"
